--- a/src/index.scss
+++ b/src/index.scss
@@ -60,11 +60,11 @@ text{
   font-size: 16px ;
   font-weight: 2000;
   position: absolute;
-  text-shadow:
-  0.07em 0 black,
-  0 0.07em black,
-  -0.07em 0 black,
-  0 -0.07em black;
+  // text-shadow:
+  // 0.07em 0 black,
+  // 0 0.07em black,
+  // -0.07em 0 black,
+  // 0 -0.07em black;
 }
 
 .icon-container {
