--- a/src/index.scss
+++ b/src/index.scss
@@ -137,7 +137,7 @@ svg {
 
 .welcomeBoxText {
   color: #09434b;
-  font-size: 28px;
+  font-size: 22px;
   text-align: center;
   font-family:'Comfortaa';
 }
@@ -161,4 +161,5 @@ svg {
   border-right: 1px solid green;
   box-shadow: 2px 1px 1px 1px green;
   font-style: italic;
+  padding-bottom: 20px;
 }
