--- a/src/index.scss
+++ b/src/index.scss
@@ -163,3 +163,8 @@ svg {
   font-style: italic;
   // padding-bottom: 20px;
 }
+
+.nav_bar_container {
+  // display: flex;
+  justify-content: stretch;
+}
