--- a/src/index.scss
+++ b/src/index.scss
@@ -6,6 +6,8 @@
     height: 60px;
     color: #f3f3f3;
     display: flex;
+    justify-content: space-between;
+    align-items: center;
 }
 
 body {
@@ -15,9 +17,12 @@ body {
 }
 
 .logo {
-  border-radius: 75%;
+  // border-radius: 75%;
   box-shadow: 2px 1px 1px 2px gray;
   cursor: pointer;
+  width: 70%;
+  height: 50%;
+  border-radius: 100%;
 }
 
 .logo:hover {
@@ -38,10 +43,18 @@ body {
 }
 
 #centerimg {
-    position:absolute;
-    top: 125px;
-    left: 550px;
-    width:500px;
+    // position:absolute;
+    // top: 125px;
+    // left: 550px;
+    width: 75%;
+    height: 100%;
+    // align-self: center;
+    justify-self: center;
+    margin-left: 12.5%;
+    // border: 2px solid orange;
+    // margin-top: 10%;
+    // align-items: center;
+
 }
 
 svg:hover {
@@ -52,7 +65,7 @@ circle.y {
   stroke: black;
 }
 line.x, line.y {
-  stroke: violet;
+  stroke: pink;
   stroke-width: 3;
   opacity: .75;
 }
@@ -64,28 +77,44 @@ text{
 }
 
 .icon-container {
-  display: flex;
-  align-items:stretch;
-  flex-direction: row;
-  flex-wrap: wrap;
-  justify-content: space-around;
-  width: 16%;
+  display: grid;
+  // grid-template-rows: repeat(3,auto);
+  grid-template-columns: repeat(4,auto);
+  grid-row-gap: 10px;
+  grid-column-gap: 10px;
+  align-items: center;
+  // border: 2px red solid;
+  width: 20vw;
+  justify-content: space-evenly;
+  grid-auto-flow: row;
+  justify-items: center;
+  // padding-top: 5%;
+  // padding-bottom: 5%;
+  border: 2px white solid;
+  box-shadow: 0px 0px 1px 2px lightblue;
+  border-radius: 60px;
+  height: 100%;
 }
 
 .visual-container {
   height: auto;
   display: flex;
   flex-wrap: wrap;
-  height: 87vh;
-  margin-left: 100px;
-  gap: 75px;
+  height: 80vh;
+  width: 90%;
+  margin-left: 5%;
+  // margin-top: 8%;
+  justify-content: space-evenly;
 }
 
 #container  {
   display: inline-block;
   align-items: stretch;
-  margin-left: 200;
-  width: -14%;
+  // margin-left: 200;
+  // width: -14%;
+  // border: 2px solid green;
+  height: 80vh;
+  width: 70%;
 }
 
 .tinterModal {
@@ -105,10 +134,11 @@ text{
   justify-content: space-around;
   position: absolute;
   background-color: #e0f2d6;
-  height: 500px;
-  width: 700px;
-  top: 100px;
-  left: 500px;
+  height: 75vh;
+  width: 70vw;
+  top: 10vh;
+  left: 15vw;
+  // left: 500px;
   border-radius: 5px;
   box-shadow: 2px 2px 4px 2px black;
   padding: 20px 30px 30px 30px;
@@ -151,3 +181,86 @@ text{
   box-shadow: 2px 1px 1px 1px green;
   font-style: italic;
 }
+
+.nav-logo{
+  // margin-left: 2%;
+}
+
+.nav-bar-right{
+  display: flex;
+  margin-left: 2%;
+  justify-content: center;
+}
+
+.footer{
+  width: 100%;
+  justify-content: right;
+  display: flex;
+  margin-right: 2%;
+}
+
+.help-button{
+  cursor: pointer;
+  // margin-right: 2%;
+  background: none;
+  height: 40px;
+  width: 40px;
+  border-radius: 100%;
+  border: #8ffcff 2px solid;
+  color: #8ffcff;
+  font-size: 24px;
+  font-weight: bolder;
+  box-shadow: 0px 0px 10px #00f9ff; 
+  background-color:lightskyblue;
+  justify-content: center;
+  margin-right: 1%;
+  text-shadow: #00f9ff 0px 2px;
+}
+
+.help-button:hover{
+    box-shadow: 0px 0px 20px #00f9ff,0px 0px 3  0px #00f9ff ;
+}
+
+.dropbtn {
+  background-color: #D7F4D2;
+  // color: lightsteelblue;
+  color: lightyellow;
+  text-shadow: 1px 1px pink;
+  padding: 18px;
+  font-size: 18px;
+  border: 1px lightgray solid;
+  border-radius: 20px;
+  font-weight: bolder;
+}
+
+.dropdown {
+  position: relative;
+  display: inline-block;
+  margin-right: 2%;
+}
+
+.dropdown-content {
+  display: none;
+  position: absolute;
+  background-color: #c7e9f5;
+  min-width: 160px;
+  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+  z-index: 1;
+  // margin-top: 5px;
+  color: wheat;
+}
+
+.dropdown-content a {
+  // color: rgb(154, 196, 137);
+  color: #d0d5f7;
+  text-shadow: 1px 1px darkcyan;
+  padding: 12px 16px;
+  text-decoration: none;
+  display: block;
+  font-weight: bolder;
+  font-size: 16px;
+}
+
+.dropdown-content a:hover {background-color: #d0d5f7; color: #c7e9f5;}
+.dropdown:hover .dropdown-content {display: block;}
+.dropdown:hover .dropbtn {background-color: #bbf3bd;}
