--- a/src/index.scss
+++ b/src/index.scss
@@ -161,6 +161,9 @@ text{
   font-size: 22px;
   text-align: center;
   font-family:'Comfortaa';
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
 }
 
 
